<?php

namespace App\Models\Hospital;

use App\Models\Center;
use App\Models\Laboratory\LabRequest;
use App\Models\Patient;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\HasMany;

class Invoice extends Model
{
    use HasFactory;

    protected $fillable = [
        'patient_id',
        'center_id',
        'patient_visit_id',
        'total_amount',
        'status', // 'UNPAID', 'PAID'
    ];

    /**
     * 👉 AJOUT TRÈS UTILE : 
     * Cette ligne force Laravel à toujours inclure ces deux champs virtuels
     * dans tes réponses JSON (API) envoyées à ton frontend React.
     */
    protected $appends = ['total_paid', 'remaining_debt', 'type'];

    // ==========================================
    // RELATIONS
    // ==========================================

    public function patient(): BelongsTo {
        return $this->belongsTo(Patient::class);
    }

    public function center(): BelongsTo {
        return $this->belongsTo(Center::class);
    }

    public function patientVisit(): BelongsTo {
        return $this->belongsTo(PatientVisit::class);
    }

    public function lines(): HasMany {
        return $this->hasMany(InvoiceLine::class);
    }

    public function payments(): HasMany {
        return $this->hasMany(PaymentInvoice::class);
    }

    public function consultations() {
        return $this->hasMany(Consultation::class);
    }

    public function performedMedicalActs() {
        return $this->hasMany(PerformedMedicalAct::class);
    }

    public function admissions() {
        return $this->hasMany(Admission::class);
    }
    public function labRequests(){
        return $this->hasMany(LabRequest::class);
    }

    // ==========================================
    // ATTRIBUTS VIRTUELS (ACCESSEURS)
    // ==========================================

    /**
     * Détermine le type de la facture (LABORATORY ou CONSULTATION)
     */
    public function getTypeAttribute()
    {
        if ($this->relationLoaded('labRequests')) {
            return $this->labRequests->count() > 0 ? 'LABORATORY' : 'CONSULTATION';
        }
        return LabRequest::where('invoice_id', $this->id)->exists() ? 'LABORATORY' : 'CONSULTATION';
    }

    /**
     * Calcule la somme totale des paiements déjà effectués pour cette facture.
     * Accessible en PHP via : $invoice->total_paid
     */
    public function getTotalPaidAttribute()
    {
        return $this->payments->sum('amount');
    }

    /**
     * Calcule la dette restante (le reste à payer).
     * Accessible en PHP via : $invoice->remaining_debt
     */
    public function getRemainingDebtAttribute()
    {
        return max(0, $this->total_amount - $this->total_paid);
    }
}